--- a/student-registration-2/public/index.html
+++ b/student-registration-2/public/index.html
@@ -130,7 +130,7 @@
       };
 
       try {
-        const response = await fetch('http://localhost:3000/register', {
+        const response = await fetch('https://student-registration-u4vt.onrender.com/register', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify(formData)
